--- a/TODO
+++ b/TODO
@@ -55,7 +55,6 @@
  .authCode
 
 .TODO
- -> шапка на всех страницах
- -> страницы: все пользователи, сообщения, о сайте
- -> backend
- -> mongodb
+ -> сообщения
+ -> лайки
+ -> reset avatar
